5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1585_2894.log
== TEST (2019-03-21 11:33:32) 
-- CODE:
frete = 45
valor_do_jogo x1 = y
x1 = frete + y

-- ERROR:
File "XXXX", line 2
    valor_do_jogo x1 = y
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:46) 
-- CODE:
frete = 45
valor_do_jogo_x1 = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_do_jogo_x1 = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:57) 
-- CODE:
frete = 45
valordojogox1 = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valordojogox1 = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:16) 
-- CODE:
frete = 45
valor_do_jogox1 = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_do_jogox1 = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:26) 
-- CODE:
frete = 45
valor_do_jogox1 = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_do_jogox1 = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:45) 
-- CODE:
frete = 45
valor_do_jogo = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_do_jogo = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:56) 
-- CODE:
frete = 45
valordojogo = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valordojogo = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:30) 
-- CODE:
frete = 45
valordo_jogo = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valordo_jogo = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:40) 
-- CODE:
frete = 45
valor-do-jogo = y
x1 = frete + y

-- ERROR:
File "XXXX", line 2
    valor-do-jogo = y
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:45) 
-- CODE:
frete = 45
valor-do-jogo = y
x1 = frete + y

-- ERROR:
File "XXXX", line 2
    valor-do-jogo = y
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:02) 
-- CODE:
frete = 45
valor-do-jogo = y
x1 = frete + y

-- ERROR:
File "XXXX", line 2
    valor-do-jogo = y
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:16) 
-- CODE:
frete = 45
valor_do_jogo = y
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_do_jogo = y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:02) 
-- CODE:
frete = 45
valor_do_jogo = input()
x1 = frete + y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:52) 
-- CODE:
frete = 45
valor_do_jogo = input("100")
x1 = frete + 

-- ERROR:
File "XXXX", line 3
    x1 = frete + 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:11) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
x1 = frete + 

-- ERROR:
File "XXXX", line 3
    x1 = frete + 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:09) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
x1 = frete + valor_do_jogo

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + valor_do_jogo
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:47) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
x1 = frete + valor_do_jogo

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + valor_do_jogo
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:10) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
x1 = frete + print

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + print
TypeError: unsupported operand type(s) for +: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:25) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
x1 = frete + print(100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + print(100)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:59) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1 = frete + print(100)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:34) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(valor_do_jogo)

-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:46:41) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(valor_do_jogo)

-- EXECUTION TIME:
0.144358
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:43) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(valor_do_jogo)

-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:27) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(x1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x1)
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:50) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(#x1)

-- ERROR:
File "XXXX", line 5
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:55) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(#x1)

-- ERROR:
File "XXXX", line 5
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:47:58) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(#x1)

-- EXECUTION TIME:
0.14788
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 5
    
              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:13) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print("x1")

-- OUTPUT:
x1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:48:29) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print("x1")

-- EXECUTION TIME:
0.148458
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
x1
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
x1
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
x1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:30) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print("x1")

-- OUTPUT:
x1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:59) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print(100)
print(x1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x1)
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:12) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print(100)
print(#x1)

-- ERROR:
File "XXXX", line 5
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:16) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print(100)
print(#x1)

-- ERROR:
File "XXXX", line 5
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:47) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print()

-- ERROR:
File "XXXX", line 5
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:59) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(100)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:20) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(+45)

-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:53) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:51:00) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)

-- EXECUTION TIME:
0.216392
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
145
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
145
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
145
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:02) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:52:04) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:52:18) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:35) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x1)
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:57) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:10) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:34) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:45) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:49) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:43) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
#x2 = frete + print()
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:49) 
-- CODE:
frete = 45
valor_do_jogo = input("valor do jogo")
#x1 = frete + print()
print(145)
#x2 = frete + print()

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:53:36) 
-- CODE:
frete = 45
n1 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n1 = float(input(valor_do_jogo + frete))
NameError: name 'valor_do_jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:54:57) 
-- CODE:
frete = 45
n1 = float(input(frete))
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:55:36) 
-- CODE:
frete = 45
n1 = float(input(frete + 100))
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:58:13) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input( + 100))
n2 =
-- ERROR:
File "XXXX", line 4
    n2 =
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:58:52) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input(valor_do_jogo1 + frete))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n1 = float(input(valor_do_jogo1 + frete))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:59:07) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input(valor_do_jogo1 + frete))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n1 = float(input(valor_do_jogo1 + frete))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:01:19) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input(valor_do_jogo1 + frete))
valor_do_jogo2 = float(input("valor do jogo 2"))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n1 = float(input(valor_do_jogo1 + frete))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:01:35) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input(valor_do_jogo1 + frete))
valor_do_jogo2 = float(input("valor do jogo 2"))
n2 = float(input(valor_do_jogo + frete))
-- EXECUTION TIME:
0.177096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 3, in <module>
    n1 = float(input(valor_do_jogo1 + frete))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:01:39) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
n1 = float(input(valor_do_jogo1 + frete))
valor_do_jogo2 = float(input("valor do jogo 2"))
n2 = float(input(valor_do_jogo + frete))
-- EXECUTION TIME:
0.177123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 3, in <module>
    n1 = float(input(valor_do_jogo1 + frete))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:39) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:44) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:52) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:53) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:55) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:03:00) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:03:53) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:03:58) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:04:20) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:04:32) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:04:39) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:04:52) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:05:58) 
-- CODE:
frete = 45
valor_do_jogo1 = float(input("valor do jogo 1"))
valor_do_jogo2 = float(input("valor do jogo 2"))
n1 = float(input(valor_do_jogo1 + frete))
n2 = float(input(valor_do_jogo2 + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_do_jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:07:38) 
-- CODE:
frete = 45
jogo1 = float(input("valor do jogo 1"))
jogo2 = float(input("valor do jogo 2"))
n1 = float(input(jogo1 + frete))
n2 = float(input(jogo2 + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:09:09) 
-- CODE:
frete = 45
jogo1 = float(input("valor do jogo 1: "))
jogo2 = float(input("valor do jogo 2: "))
n1 = float(input(jogo1 + frete))
n2 = float(input(jogo2 + frete))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:11:30) 
-- CODE:
frete = 45
jogo1 = float(input("valor do jogo 1: "))
jogo2 = float(input("valor do jogo 2: "))
n1 = float(input(jogo1 + frete))
n2 = float(input(jogo2 + frete))
renda = (frete + n1) + (frete +n2)
print(renda)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:23:22) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))

frete = 45.0
renda = (frete + x1) + (frete + x2)
print(renda)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:30:03) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))
frete = 45.0
renda = (frete + x1) + (frete + x2) + (frete + x3) + (frte + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.147837
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:31:03) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))
frete = 45.0
renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.169541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:31:08) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))
frete = 45.0
renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:32:31) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))

frete = 45.0

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.165677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:36:41) 
-- CODE:
x1 = float(input("valorjogo1:100.0 "))
x2 = float(input("valorjogo2:120.0 "))
x3 = float(input("valorjogo3:130.0 "))
x4 = float(input("valorjogo4:123.0 "))
x5 = float(input("valorjogo5:143.0 "))
x6 = float(input("valorjogo6:126.0 ")) 
x7 = float(input("valorjogo7:174.0 "))
x8 = float(input("valorjogo8:184.0 "))

frete = 45.0

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.187111
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:36:47) 
-- CODE:
x1 = float(input("valorjogo1:100.0 "))
x2 = float(input("valorjogo2:120.0 "))
x3 = float(input("valorjogo3:130.0 "))
x4 = float(input("valorjogo4:123.0 "))
x5 = float(input("valorjogo5:143.0 "))
x6 = float(input("valorjogo6:126.0 ")) 
x7 = float(input("valorjogo7:174.0 "))
x8 = float(input("valorjogo8:184.0 "))

frete = 45.0

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:37:39) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))

frete = 45.0

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:38:08) 
-- CODE:
x1 = float(input("valorjogo1: "))
x2 = float(input("valorjogo2: "))
x3 = float(input("valorjogo3: "))
x4 = float(input("valorjogo4: "))
x5 = float(input("valorjogo5: "))
x6 = float(input("valorjogo6: ")) 
x7 = float(input("valorjogo7: "))
x8 = float(input("valorjogo8: "))

frete = 45.0

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.144644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    x2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:39:16) 
-- CODE:
x1 = int(input("valorjogo1: "))
x2 = int(input("valorjogo2: "))
x3 = int(input("valorjogo3: "))
x4 = int(input("valorjogo4: "))
x5 = int(input("valorjogo5: "))
x6 = int(input("valorjogo6: ")) 
x7 = int(input("valorjogo7: "))
x8 = int(input("valorjogo8: "))

frete = 45

renda = (frete + x1) + (frete + x2) + (frete + x3) + (frete + x4) + (frete + x5) + (frete + x6) + (frete + x7) + (frete + x8)
print(renda)
-- EXECUTION TIME:
0.148311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 1, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:46:02) 
-- CODE:
x1 = int(input("valorjogo1: "))
x2 = int(input("valorjogo2: "))
x3 = int(input("valorjogo3: "))
x4 = int(input("valorjogo4: "))
x5 = int(input("valorjogo5: "))
x6 = int(input("valorjogo6: ")) 
x7 = int(input("valorjogo7: "))
x8 = int(input("valorjogo8: "))

frete = 45

renda1 = (frete + x1)
renda2 = (frete + x2)
renda3 = (frete + x3)
renda4 = (frete + x4)
renda5 = (frete + x5)
renda6 = (frete + x6)
renda7 = (frete + x7)
renda8 = (frete + x8)
print(renda1)
print(renda2)
print(renda3)
print(renda4)
print(renda5)
print(renda6)
print(renda7)
print(renda8)
-- EXECUTION TIME:
0.158179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 1, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:46:08) 
-- CODE:
x1 = int(input("valorjogo1: "))
x2 = int(input("valorjogo2: "))
x3 = int(input("valorjogo3: "))
x4 = int(input("valorjogo4: "))
x5 = int(input("valorjogo5: "))
x6 = int(input("valorjogo6: ")) 
x7 = int(input("valorjogo7: "))
x8 = int(input("valorjogo8: "))

frete = 45

renda1 = (frete + x1)
renda2 = (frete + x2)
renda3 = (frete + x3)
renda4 = (frete + x4)
renda5 = (frete + x5)
renda6 = (frete + x6)
renda7 = (frete + x7)
renda8 = (frete + x8)
print(renda1)
print(renda2)
print(renda3)
print(renda4)
print(renda5)
print(renda6)
print(renda7)
print(renda8)
-- EXECUTION TIME:
0.204781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 1, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:46:12) 
-- CODE:
x1 = int(input("valorjogo1: "))
x2 = int(input("valorjogo2: "))
x3 = int(input("valorjogo3: "))
x4 = int(input("valorjogo4: "))
x5 = int(input("valorjogo5: "))
x6 = int(input("valorjogo6: ")) 
x7 = int(input("valorjogo7: "))
x8 = int(input("valorjogo8: "))

frete = 45

renda1 = (frete + x1)
renda2 = (frete + x2)
renda3 = (frete + x3)
renda4 = (frete + x4)
renda5 = (frete + x5)
renda6 = (frete + x6)
renda7 = (frete + x7)
renda8 = (frete + x8)
print(renda1)
print(renda2)
print(renda3)
print(renda4)
print(renda5)
print(renda6)
print(renda7)
print(renda8)
-- EXECUTION TIME:
0.176237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 1, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:46:15) 
-- CODE:
x1 = int(input("valorjogo1: "))
x2 = int(input("valorjogo2: "))
x3 = int(input("valorjogo3: "))
x4 = int(input("valorjogo4: "))
x5 = int(input("valorjogo5: "))
x6 = int(input("valorjogo6: ")) 
x7 = int(input("valorjogo7: "))
x8 = int(input("valorjogo8: "))

frete = 45

renda1 = (frete + x1)
renda2 = (frete + x2)
renda3 = (frete + x3)
renda4 = (frete + x4)
renda5 = (frete + x5)
renda6 = (frete + x6)
renda7 = (frete + x7)
renda8 = (frete + x8)
print(renda1)
print(renda2)
print(renda3)
print(renda4)
print(renda5)
print(renda6)
print(renda7)
print(renda8)
-- EXECUTION TIME:
0.206616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 1, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:49:33) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45 + x
print(total)

-- EXECUTION TIME:
0.15137
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:49:38) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45 + x
print(total)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:49:58) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45 + x
print(total)

-- EXECUTION TIME:
0.122694
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:50:33) 
-- CODE:
x = float(input("valor do jogo:100 "))
total = 45 + x
print(total)

-- EXECUTION TIME:
0.166828
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:50:34) 
-- CODE:
x = float(input("valor do jogo:100 "))
total = 45 + x
print(total)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:51:30) 
-- CODE:
x = float(input("valor do jogo: ")) * 7
total = 45 + x 
print(total)

-- EXECUTION TIME:
0.127111
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53.61
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2537.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
867954.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:51:33) 
-- CODE:
x = float(input("valor do jogo: ")) * 7
total = 45 + x 
print(total)

-- OUTPUT:
53.61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:52:13) 
-- CODE:
x = float(input("valor do jogo: ")) * 7
total = 45.0 + x 
print(total)

-- EXECUTION TIME:
0.166113
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53.61
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2537.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
867954.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:54:20) 
-- CODE:
x = float(input("valor do jogo: "))
total = (45.0 + x) * 8 
print(total)

-- OUTPUT:
369.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:54:24) 
-- CODE:
x = float(input("valor do jogo: "))
total = (45.0 + x) * 8 
print(total)

-- EXECUTION TIME:
0.146672
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
369.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3208.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992256.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:54:28) 
-- CODE:
x = float(input("valor do jogo: "))
total = (45.0 + x) * 8 
print(total)

-- EXECUTION TIME:
0.133288
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
369.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3208.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992256.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:55:02) 
-- CODE:
x = float(input("valor do jogo: "))
total = (360.0 + x) * 8 
print(total)

-- EXECUTION TIME:
0.183324
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
2889.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5728.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
994776.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:55:07) 
-- CODE:
x = float(input("valor do jogo: "))
total = (360.0 + x) * 8 
print(total)

-- EXECUTION TIME:
0.173184
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
2889.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
5728.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
994776.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:55:53) 
-- CODE:
x = float(input("valor do jogo: "))
total = (45.0 + x) * 8 
print(total)

-- EXECUTION TIME:
0.19612
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
369.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3208.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992256.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:56:05) 
-- CODE:
x = float(input("valor do jogo: "))
total = (45.0 + x) * 7
print(total)

-- EXECUTION TIME:
0.212725
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
323.60999999999996
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2807.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
868224.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:56:58) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45.0 + (x * 8)
print(total)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:57:02) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45.0 + (x * 8)
print(total)

-- EXECUTION TIME:
0.138831
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:39:05) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45.0 + x * 
print(total)

-- EXECUTION TIME:
0.154143
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 2
    total = 45.0 + x * 
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:39:10) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45.0 + x * 8
print(total)

-- EXECUTION TIME:
0.129121
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:24:47) 
-- CODE:
x = float(input("valor do jogo: "))
total = 45.0 + x * 8
print(total)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
